<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context="com.example.don_r.tucanoapp.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tucanoapp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="@color/lightslategray"
        android:textStyle="bold"
        android:textSize="40dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="226dp"
        android:src="@drawable/logo2"
        android:layout_gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textColorHint="@color/lightslategray"
        android:textColor="@color/lightslategray"
        android:textAlignment="center"
        android:id="@+id/eUsuario"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/lightslategray"
        android:textAlignment="center"
        android:textColor="@color/lightslategray"
        android:id="@+id/eContraseña"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar"
        android:layout_gravity="center"
        android:id="@+id/bIniciar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:textColor="@color/lightslategray"
        android:textAlignment="center"
        android:id="@+id/tRegistro"/>

</LinearLayout>


